layout issues sort of fixed, work to be continued.

--- a/peralta_layout/peralta.scss
+++ b/peralta_layout/peralta.scss
@@ -101,35 +101,15 @@ nav{
   }
 }
 
-
-aside {
-  height: 100%;
-  width: 25%;
-  padding: 300px 0 0 0;
-  float: left;
-  display: inline-block;
-  p{
-    height: 50px;
-    width: 100px;
-    vertical-align: center;
-    color: white;
-    background: $red;
-    display: inline-block;
-  }
-}
-
-.wrapper {
-  width: 50%;
-  display: inline-block;
-  margin: 0 25% 0 25%;
-}
   .top {
-    position: absolute;
+    position: relative;
+    display:block;
     width: 50%;
     height: 350px;
     @include border();
     @include shadow();
     overflow: hidden;
+    margin: 0 25% 0 25%;
   }
   .topimg{
     position: absolute;
@@ -202,16 +182,13 @@ aside {
       }
     }
 .photowrap {
-  position: absolute;
   height: 100%;
-  width: 100%;
+  width: 75%;
   list-style-type:none;
-  aside {
-    width: 25%;
-    float: left;
-    display: inline-block;
+  display: inline-block;
   ul {
-    width: 66%;
+    width: 60%;
+    margin: 0 0 0 0;
     padding:0;
     display:inline-block;
     list-style-type: none;
@@ -223,7 +200,6 @@ aside {
     @include border();
     @include shadow();
     }
-  }
 }}
 .lance {
     background: url('images/sk8er-4.png') no-repeat;
@@ -260,6 +236,22 @@ aside {
       background-size: 100% auto;
       @include border();
       @include shadow();
+  }
+
+  aside {
+    height: 100%;
+    width: 33%;
+    padding: 0 0 0 0;
+    float: left;
+    display: inline-block;
+    p{
+      height: auto;
+      width: 100%;
+      vertical-align: center;
+      color: white;
+      background: $red;
+      display: inline-block;
+    }
   }
   .boardwrap{
     @extend .wrapper;
